Add navigation bar menu item texts to languages

--- a/route-tracker-spa/public/locales/de/translation.json
+++ b/route-tracker-spa/public/locales/de/translation.json
@@ -3,5 +3,11 @@
     "welcome": "Willkommen",
     "info": "Sie müssen sich anmelden, um die Website zu nutzen.",
     "button": "anmeldung"
+  },
+  "navigationMenu" : {
+    "homepage" : "Startseite",
+    "statistics" : "Statistiken",
+    "settings" : "Einstellungen",
+    "logout": "Abmelden"
   }
 }
