--- a/route-tracker-spa/public/locales/en/translation.json
+++ b/route-tracker-spa/public/locales/en/translation.json
@@ -3,5 +3,11 @@
     "welcome": "Welcome",
     "info": "You must login in order to use the website",
     "button": "login"
+  },
+  "navigationMenu" : {
+    "homepage" : "Homepage",
+    "statistics" : "Statistics",
+    "settings" : "Settings",
+    "logout": "Logout"
   }
 }
