Add settings page texts to translations

--- a/route-tracker-spa/public/locales/de/translation.json
+++ b/route-tracker-spa/public/locales/de/translation.json
@@ -9,5 +9,10 @@
     "statistics" : "Statistiken",
     "settings" : "Einstellungen",
     "logout": "Abmelden"
+  },
+  "settings": {
+    "hourlyRate": "Stundensatz",
+    "overtimeRate": "Überstundensatz",
+    "nightShiftRate" : "Nachtzuschlag"
   }
 }
