--- a/route-tracker-spa/public/locales/en/translation.json
+++ b/route-tracker-spa/public/locales/en/translation.json
@@ -9,5 +9,10 @@
     "statistics" : "Statistics",
     "settings" : "Settings",
     "logout": "Logout"
+  },
+  "settings": {
+    "hourlyRate": "Hourly rate",
+    "overtimeRate": "Overtime rate",
+    "nightShiftRate" : "Night shift rate"
   }
 }
