--- a/route-tracker-spa/public/locales/hu/translation.json
+++ b/route-tracker-spa/public/locales/hu/translation.json
@@ -9,5 +9,10 @@
     "statistics" : "Statisztikák",
     "settings" : "Beállítások",
     "logout": "Kijelentkezés"
+  },
+  "settings": {
+    "hourlyRate": "Órabér",
+    "overtimeRate": "Túlóra pótlék",
+    "nightShiftRate" : "Éjszakai pótlék"
   }
 }
