Add settings page words to translation

--- a/route-tracker-spa/public/locales/de/translation.json
+++ b/route-tracker-spa/public/locales/de/translation.json
@@ -13,6 +13,7 @@
   "settings": {
     "hourlyRate": "Stundensatz",
     "overtimeRate": "Überstundensatz",
-    "nightShiftRate" : "Nachtzuschlag"
+    "nightShiftRate" : "Nachtzuschlag",
+    "save" : "Speichern"
   }
 }
