--- a/route-tracker-spa/public/locales/en/translation.json
+++ b/route-tracker-spa/public/locales/en/translation.json
@@ -13,6 +13,7 @@
   "settings": {
     "hourlyRate": "Hourly rate",
     "overtimeRate": "Overtime rate",
-    "nightShiftRate" : "Night shift rate"
+    "nightShiftRate" : "Night shift rate",
+    "save" : "Save"
   }
 }
